force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/leaseworks__Supplemental_Rent_Rate__c.object-meta.xml
<CustomObject>
    <description>This placeholder stores all rate details for the MR calculations. Multiple MR charges can be defined for supplemental rent, and the utilization MR calculation will consider all of them. Based on the method defined in the supplemental rent, the total MR calculation for a particular component will be performed.</description>
    <label>Supplemental Rent Rate</label>
    <nameField>
        <label>Supplemental Rent Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplemental Rent Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>