force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <description>Additional notes or comments related to this supplemental rent rate can be added here.</description>
    <inlineHelpText>Additional notes or comments related to this supplemental rent rate can be added here.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>