force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Current_Rate_Escalated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rate_Escalated__c</fullName>
    <description>Escalated Base Rate as per last Utilization (blank if Ratio Table is selected)</description>
    <inlineHelpText>Escalated Base Rate as per last Utilization (blank if Ratio Table is selected)</inlineHelpText>
    <label>_Rate Base Esc (Latest)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>