force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Current_Rate_Interpolated_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rate_Interpolated_F__c</fullName>
    <description>Displays the value when &quot;Rate Based On&quot; is set to &quot;Ratio Table.&quot; It shows the rate calculated from the latest approved actual utilization, after interpolating the rates based on the FH and FC. This makes it easy to reference the interpolated rate from the relevant schedule Rate. Note: If &quot;Rate Based On&quot; is set to &quot;Rate,&quot; this field will be blank.</description>
    <formula>IF(  NOT( ISNULL( leaseworks__Ratio_Table__c ) ) , leaseworks__Current_Rate_Interpolated__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the value when &quot;Rate Based On&quot; is set to &quot;Ratio Table.&quot; It shows the rate calculated from the latest approved actual utilization, after interpolating the rates based on the FH and FC. This makes it easy to reference the interpolated rate from the relevant schedule Rate. Note: If &quot;Rate Based On&quot; is set to &quot;Rate,&quot; this field will be blank.</inlineHelpText>
    <label>Interpolated Rate Latest</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>