force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Derate_Choice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Derate_Choice__c</fullName>
    <description>Interpolation method to be used for Derate, applicable for the FH:FC ratio based calculation.</description>
    <inlineHelpText>Interpolation method to be used for Derate, applicable for the FH:FC ratio based calculation.</inlineHelpText>
    <label>Derate Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Limit</fullName>
                <default>true</default>
                <label>Lower Limit</label>
            </value>
            <value>
                <fullName>Interpolate</fullName>
            </value>
            <value>
                <fullName>Upper Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>