force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactive Supplemental Rent Rate records will not be consider for the utilization MR calculation.</description>
    <inlineHelpText>Inactive Supplemental Rent Rate records will not be considered for the utilization MR calculation.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>