force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__isOnCurrentUtil__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__isOnCurrentUtil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for internal purposes to identify the current SRR used in MR calculations based on the latest approved utilization. Based on this check, the &apos;Current Rate&apos; dynamic related list is conditionally displayed.</description>
    <label>_isOnCurrentUtil</label>
    <type>Checkbox</type>
</CustomField>