force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__MR_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Rate_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MR Rate Schedule</label>
    <referenceTo>leaseworks__MR_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Rate</relationshipLabel>
    <relationshipName>Supplemental_Rent_Rate</relationshipName>
    <type>Lookup</type>
</CustomField>