force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate__c</fullName>
    <description>Charge Rate per unit of utilization (such as Flight Hours - FH, Flight Cycles - FC, etc.), which is calculated to a precision of two decimal places. This effectively overrides the Base Rate (Precise) field, which originally has a precision of six decimal places.</description>
    <inlineHelpText>Charge Rate per unit of utilization (such as Flight Hours - FH, Flight Cycles - FC, etc.), which is calculated to a precision of two decimal places. This effectively overrides the Base Rate (Precise) field, which originally has a precision of six decimal places.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>