force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Based_On__c</fullName>
    <description>The &apos;Rate Based on&apos; field specifies which rate to use for the calculation. Selecting the &apos;Rate&apos; option will use the rate value for the MR calculation, while selecting the &apos;Ratio/Matrix Table&apos; option will use the interpolated value from the respective ratio/matrix table for the MR calculation. Either the rate or ratio/matrix table is mandatory, depending on the option chosen in this field.</description>
    <inlineHelpText>The &apos;Rate Based on&apos; field specifies which rate to use for the calculation. Selecting the &apos;Rate&apos; option will use the rate value for the MR calculation, while selecting the &apos;Ratio/Matrix Table&apos; option will use the interpolated value from the respective ratio/matrix table for the MR calculation. Either the rate or ratio/matrix table is mandatory, depending on the option chosen in this field.</inlineHelpText>
    <label>Rate Based On</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Ratio Table</fullName>
                <label>Ratio/Matrix Table</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>