force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Rate_Precise__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Precise__c</fullName>
    <description>Charge Rate per unit of utilization (such as Flight Hours - FH, Flight Cycles - FC, etc.), which is calculated to a precision of six decimal places. However, the Rate Base field, which has a precision of two decimal places, always supersedes this Charge Rate (keep it blank if you need more precision).</description>
    <inlineHelpText>Charge Rate per unit of utilization (such as Flight Hours - FH, Flight Cycles - FC, etc.), which is calculated to a precision of six decimal places. However, the Rate Base field, which has a precision of two decimal places, always supersedes this Charge Rate (keep it blank if you need more precision)</inlineHelpText>
    <label>Rate (Precise)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>