force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Unit__c</fullName>
    <description>User specifies the units of utilization (e.g., flight hours, flight cycles, monthly) that the system will employ for calculating the MR using the effective Rate for each period</description>
    <inlineHelpText>This is a required field, please specify the units of utilization (e.g., flight hours, flight cycles, monthly) that the system will employ for calculating the MR using the effective Rate for each period.</inlineHelpText>
    <label>Rate Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APU H</fullName>
            </value>
            <value>
                <fullName>APU C</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Cycles</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Airframe FH</fullName>
            </value>
            <value>
                <fullName>Airframe FC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>