force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Table__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up to the &apos;Ratio/Matrix Table&apos; for this supplemental rent rate. It will be used for MR calculation when generating utilization.</description>
    <inlineHelpText>Kindly link the appropriate Ratio/Matrix Table with this supplemental rent rate. It will be used for MR calculation when generating utilization.</inlineHelpText>
    <label>Ratio/Matrix Table</label>
    <referenceTo>leaseworks__Ratio_Table__c</referenceTo>
    <relationshipLabel>Supplemental Rent Rate</relationshipLabel>
    <relationshipName>Supplemental_Rent_Rate</relationshipName>
    <type>Lookup</type>
</CustomField>