force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <description>Master relationship with Supplemental Rent</description>
    <inlineHelpText>Master relationship with Supplemental Rent</inlineHelpText>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Rate</relationshipLabel>
    <relationshipName>Supplemental_Rent_Rate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>