force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Y_hidden_Base_Supplemental_Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_Base_Supplemental_Rent_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the previous rate schedule related SRR record</description>
    <inlineHelpText>This field is used to store the previous rate schedule related SRR record</inlineHelpText>
    <label>_Base Supplemental Rent Rate</label>
    <referenceTo>leaseworks__Supplemental_Rent_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Rate</relationshipLabel>
    <relationshipName>Supplemental_Rent_Rate</relationshipName>
    <type>Lookup</type>
</CustomField>