force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/leaseworks__Y_Hidden_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Serial_No__c</fullName>
    <label>_Serial No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>