force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/fields/Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>Rate_Period__c</fullName>
    <description>Local field created for the reporting purpose. This copies the Start date from the respective Rate schedule.</description>
    <formula>leaseworks__MR_Rate_Schedule__r.leaseworks__MR_Rate_Start_Date__c</formula>
    <inlineHelpText>Local field created for the reporting purpose. This copies the Start date from the respective Rate schedule.</inlineHelpText>
    <label>Rate Period</label>
    <type>Date</type>
</CustomField>