force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/validationRules/leaseworks__Rate_Based_On_none_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Rate_Based_On_none_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISBLANK(TEXT(leaseworks__Rate_Based_On__c)),OR(NOT(ISBLANK(leaseworks__Rate__c)),NOT(ISBLANK(leaseworks__Ratio_Table__c)))) , true, false)</errorConditionFormula>
    <errorMessage>Please select the &quot;Rate Based On&quot; option according to the values entered in the &quot;Rate&quot; or &quot;Ratio Table&quot; fields. Select &quot;Rate&quot; if a rate is entered, and select &quot;Ratio Table&quot; if the ratio table is entered. The &quot;None&quot; value is not valid for MR calculation.</errorMessage>
</ValidationRule>