force-app/main/default/objects/leaseworks__Supplemental_Rent_Rate__c/validationRules/leaseworks__Rate_Based_On_options_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Rate_Based_On_options_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( ISPICKVAL(leaseworks__Rate_Based_On__c, &apos;Rate&apos;) , OR( AND(ISBLANK(leaseworks__Rate__c),ISBLANK(leaseworks__Rate_Precise__c), ISBLANK(leaseworks__Ratio_Table__c)), 
AND(ISBLANK(leaseworks__Rate__c),ISBLANK(leaseworks__Rate_Precise__c), NOT(ISBLANK(leaseworks__Ratio_Table__c)) ))), true, 
IF(AND( ISPICKVAL(leaseworks__Rate_Based_On__c, &apos;Ratio Table&apos;), OR( AND( ISBLANK(leaseworks__Rate__c),ISBLANK(leaseworks__Rate_Precise__c), ISBLANK(leaseworks__Ratio_Table__c) ), AND( OR(NOT(ISBLANK(leaseworks__Rate__c)),NOT(ISBLANK(leaseworks__Rate_Precise__c))), ISBLANK(leaseworks__Ratio_Table__c) ))), true, false)
)</errorConditionFormula>
    <errorMessage>Please provide either a Rate or a Ratio Table for MR calculation based on the selected &apos;Rate Based On&apos; option.</errorMessage>
</ValidationRule>